# yaoTong

./: CMakeLists.txt  main.cpp
yolo/: coco.names  yolo-fastest.cfg  yolo-fastest_10000.weights  yolo-fastest_40000.weights  yolo-fastest_last.weights  yolo.hpp
