cmake_minimum_required(VERSION 3.5)
project(yaotongv2.0)
add_definitions(-std=c++11)

set (CMAKE_CXX_STANDARD 11)
set(CMAKE_C_FLAGS "-Wall")
set(CMAKE_CXX_FLAGS "-Wall")

aux_source_directory(. SRC_LIST)
add_executable(run main.cpp ${SRC_LIST})
aux_source_directory(. SRC_LIST)
#add_executable(${PROJECT_NAME} ${SRC_LIST})
find_package( OpenCV  REQUIRED )
#include_directories(home/ydm/Codes/yaotongv2.0)
#find_package( REALSENSE 2 REQUIRED )
#install(TARGETS pic_cap RUNTIME DESTINATION bin)
target_link_libraries(run ${OpenCV_LIBS})
target_link_libraries(run ${DEPENDENCIES})
#target_link_libraries(pic_cap ${REALSENSE2_LIBS})
include_directories("inc")
include_directories("yolo")
aux_source_directory(src SRC_FILES)
add_library(v4l2cpp SHARED ${SRC_FILES})
target_link_libraries(v4l2cpp ${OpenCV_LIBS})
target_link_libraries(run v4l2cpp)

